[project]
name = "pfe-traj-opt"
version = "0.1.0"
description = "Code pour l'optimisation de trajectoires d'avion avec de l'intelligence artificielle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "openap>=2.4",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xpc*", "xp_sim_gym*"]
