[project]
name = "pfe-openap-sim-gym"
version = "0.1.0"
description = "A gymnasium environment to train RL models for wind deviation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "openap>=2.4",
    "optuna>=4.7.0",
    "pydantic>=2.12.5",
    "pygame-ce>=2.5.6",
    "rich>=14.2.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openap_sim_gym*"]
